test/assets/invalid/string-to-num/expect-int.hs
a :: Int -> String
a = show

b = a "42"